resolved other components popping up the date picker by adding z-index
1. while using the date picker, hovering over card components was causing cards popping up the data picker. I have added a z-index = 10 to the date picker component so that the cards don't pop up that.
2. Due to positioning issue the date picker and guest selector were separating out. I have fixed that problem also.

--- a/src/Search.css
+++ b/src/Search.css
@@ -4,6 +4,10 @@
     left: 25%;
     width: 100vw;
     z-index: 100;
+    display: flex;
+    flex-flow: column;
+    width: 579px;
+    background-color: white;
 }
 
 .search > h2 {
@@ -13,7 +17,6 @@
     width: 559px;
     padding: 10px;
     background-color: white;
-
 }
 
 .search > input {
@@ -31,7 +34,8 @@
     text-transform: inherit !important;
     background-color: #ff7779;
     color: white;
-    width: 579px;
+    width: 559px;
+    margin: 10px;
   }
 
 .search > button:hover {
